@startuml class-diagram

class Biblioteca {
    - vector<Libro> libros
    - vector<Revista> revistas

    + void agregarLibro(Libro libro)
    + void agregarRevista(Revista revista)
    + void imprimirLibroPorId(int id)
    + void imprimirRevistaPorId(int id)
    + int contarRecursos() const
    + int contarLibros() const
    + int contarRevistas() const
    + vector<Libro> obtenerLibros() const
    + vector<Revista> obtenerRevistas() const
}

class Recurso {
    # string contenido
    # int id
    # string titulo

    + Recurso(string contenido, int id, string titulo)
    + string getContenido() 
    + int getId() 
    + string getTitulo() 
    + void setContenido(string contenido)
    + void setId(int nuevoId)
    + void setTitulo(string titulo)
}

class Libro {
    - string genero
    - int edicion
    - string autor
    
    + Libro(string contenido, int id, string titulo, string genero, int edicion, string autor)
    + string toString() 
    + string getGenero() 
    + int getEdicion() 
    + string getAutor() 
    + void setGenero(string genero)
    + void setEdicion(int edicion)
    + void setAutor(string autor)
}

class Revista {
    - string periodicidad
    - int numEjemplar
    - string tema

    + Revista(string contenido, int id, string titulo, string periodicidad, int numEjemplar, string tema)
    + string toString() 
    + string getPeriodicidad() 
    + int getEjemplar() 
    + string getTema() 
    + void setPeriodicidad(string periodicidad)
    + void setEjemplar(int numEjemplar)
    + void setTema(string tema)
}

class Interfaz {
    - Biblioteca biblioteca

    + void ejecutar()
    - void mostrarMenu()
    - void crearLibro()
    - void crearRevista()
}

Recurso <|-up- Libro
Recurso <|-up- Revista
Biblioteca o-- "0..*" Libro
Biblioteca o-- "0..*" Revista
Interfaz *-- "1" Biblioteca

@enduml
